tests/snapshots/snapshot__type_errors@duplicate_fields.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/duplicate_fields.roto
---
Error: Type error: field `a` appears multiple times in the same record
   ╭─[ tests/scripts/type_errors/duplicate_fields.roto:1:14 ]
   │
 1 │ struct Foo { a: u32, a: u32 }
   │              ┬       ┬  
   │              ╰────────── field `a` declared here
   │                      │  
   │                      ╰── field `a` declared here
───╯
